syntax = "proto3";
option java_package = "com.talentica.hungryHippos.sharding.protos";
option java_outer_classname = "BucketCombinationToNodeNumberMapProtos";

message BucketCombinationToNodeNumberMap {
	repeated BucketCominationToNodeNumber bucketCombinationToNodeNumber = 1;
}

message BucketCominationToNodeNumber {
	BucketCombinationMap bucketCombinationMap = 1;
	repeated Node nodes = 2;
}

message BucketCombinationMap {
	repeated BucketCombination bucketCombination = 1;
}

message BucketCombination {
	string key = 1;
	Bucket bucket = 2;
	
	message Bucket {
    	int32 id = 1;
    	int64 size = 2;
    }
}

message Node {
    int32 nodeId = 1;
    int64 nodeCapacity = 2;
    int64 remainingCapacity = 3;
}